[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
cargo-tarpaulin = "0.30.0"
actix-web ="4"
tokio ={ version ="1", features = ["macros", "rt-multi-thread"]}

[dev-dependencies]
reqwest = "0.12.5"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "ling-arg=fuse-ld=lld"]
